<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/draw_menu1"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/draw_menu1"/>
    
    <item
        android:id="@+id/draw_menu2"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/draw_menu2"/>
    
    <item
        android:id="@+id/draw_menu3"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/draw_menu3"/>
    
    <item
        android:id="@+id/draw_menu4"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/draw_menu4"/>
    
    <item
        android:id="@+id/draw_menu5"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/draw_menu5"/>

</menu>
